--- a/code-examples/2.useRef copy.mdx
+++ b/code-examples/2.useRef copy.mdx
@@ -11,7 +11,7 @@ borderImageSource: "linear-gradient(120deg, #1890ff, #db18ff)",
 
 <CodeSurfer>
 
-```jsx title="useTimeline"
+```jsx title="useTimeline" subtitle="mantian values throught renders"
 export default function useTimeline(value, maxLength) {
   const valuesRef = useRef([]);
   const prevValue = usePrevious(value);
