--- a/code-examples/2.useRef.mdx
+++ b/code-examples/2.useRef.mdx
@@ -14,7 +14,7 @@ borderImageSource: "linear-gradient(120deg, #1890ff, #db18ff)",
 <Step>
 <div style={styledCenter}>
 <h1> useRef</h1>
-<p>a mutable value thorughout renders</p>
+<p>usePrevious example</p>
 </div>
 
 ```jsx
@@ -33,7 +33,7 @@ function usePrevious(value) {
 <Step>
 <div style={styledCenter}>
 <h1> useRef</h1>
-<p>with other hooks</p>
+<p>with Custom hook</p>
 </div>
 
 ```jsx
