--- a/code-examples/4.useMemo.mdx
+++ b/code-examples/4.useMemo.mdx
@@ -31,5 +31,24 @@ function RenderPrimes({iterations, multiplier}) {
 ```
 
 </Step>
+<Step>
+<div style={styledCenter}>
+<h1> useMemo</h1>
+<p>Big data processing</p>
+</div>
+
+```jsx 4
+function RenderPrimes({iterations, multiplier}) {
+  const primes = React.useMemo(
+    () => 
+    calculatePrimes(iterations, multiplier),
+     [iterations,multiplier]
+     )
+
+  return <div>Primes! {primes}</div>
+}
+```
+
+</Step>
 
 </CodeSurferColumns>
