--- a/code-examples/3.useCallback.mdx
+++ b/code-examples/3.useCallback.mdx
@@ -23,7 +23,7 @@ borderImageSource: "linear-gradient(120deg, #1890ff, #db18ff)",
 </div>
 
 
-```jsx 
+```jsx
 function ProductPage({ productId }) {
   // ✅ Wrap with useCallback to avoid change on every render
   const fetchProduct = useCallback(() => {
@@ -74,7 +74,7 @@ function ProductDetails({ fetchProduct }) {
 <Step>
 <div style={styledCenter}>
 <h1> useCallback</h1>
-<p> Referintial Equality </p>
+<p> Referential Equality </p>
 </div>
 
 ```jsx 10:13
